--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,35 @@
     <meta name="format-detection" content="telephone=no" />
     <link rel="shortcut icon" href="https://s.zbjimg.com/img/favicon.ico" type="image/x-icon" />
     <title>zhubi</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_486362_crg1myssk1kbj4i.css">
   </head>
-  <body>
+  <body style="position: relative;">
     <noscript>
       <strong>We're sorry but zhubi doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+      <div style="position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        text-align: center;" class="preload">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          width="24px" height="30px" viewBox="0 0 24 30" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+          <rect x="0" y="0" width="4" height="10" fill="#333" transform="translate(0 15.1665)">
+            <animateTransform attributeType="xml" attributeName="transform" type="translate" values="0 0; 0 20; 0 0" begin="0" dur="0.6s"
+              repeatCount="indefinite"></animateTransform>
+          </rect>
+          <rect x="10" y="0" width="4" height="10" fill="#333" transform="translate(0 11.5002)">
+            <animateTransform attributeType="xml" attributeName="transform" type="translate" values="0 0; 0 20; 0 0" begin="0.2s"
+              dur="0.6s" repeatCount="indefinite"></animateTransform>
+          </rect>
+          <rect x="20" y="0" width="4" height="10" fill="#333" transform="translate(0 1.83315)">
+            <animateTransform attributeType="xml" attributeName="transform" type="translate" values="0 0; 0 20; 0 0" begin="0.4s"
+              dur="0.6s" repeatCount="indefinite"></animateTransform>
+          </rect>
+        </svg>
+      </div>
     <!-- built files will be auto injected -->
+    <script src="./ue/zbj_ue.js"></script>
   </body>
 </html>
